# Auto-Deco-Kuzureta-Style

./: .gitignore  CMakeLists.txt  README.md  mod.json
.github/workflows/: build.yml
Auto-Deco-Kuzureta-Style-main/: about.md
Auto-Deco-Kuzureta-Style-main/src/: EditorUIHook.hpp  ParallaxGenerator.cpp  ParallaxGenerator.hpp
src/: AndroidBridge.cpp  AndroidBridge.hpp  ChainGenerator.cpp  ChainGenerator.hpp  CityGenerator.cpp  CityGenerator.hpp  ClusterSystem.cpp  ClusterSystem.hpp  CrystalGenerator.cpp  CrystalGenerator.cpp.bak  CrystalGenerator.hpp  DensitySystem.cpp  DensitySystem.hpp  EditorLayerBridge.hpp  EditorUIHook.cpp  EditorUIHook.cpp.bak  EditorUIHook.hpp  GlowGenerator.cpp  GlowGenerator.hpp  ImageAnalyzer.cpp  ImageAnalyzer.hpp  ImageDecoPopup.cpp  ImageDecoPopup.hpp  KuzuretaGenerator.cpp  KuzuretaGenerator.cpp.bak  KuzuretaGenerator.cpp.old  KuzuretaGenerator.hpp  LayoutAnalyzer.cpp  LayoutAnalyzer.hpp  ParallaxGenerator.cpp  ParallaxGenerator.cpp.bak  SectionAnalyzer.cpp  SectionAnalyzer.hpp  StyleClassifier.cpp  StyleClassifier.hpp  TemplateDatabase.cpp  TemplateDatabase.hpp  ThemeSystem.cpp  ThemeSystem.hpp  TriggerGenerator.cpp  (+2 more)
